@@ -6,6 +6,8 @@ What's New in astroid 2.7.0?
 ============================
 Release Date: TBA
 
+* Import from ``astroid.node_classes`` and ``astroid.scoped_nodes`` has been deprecated in favor of
+  ``astroid.nodes``. Only the imports from ``astroid.nodes`` will work in astroid 3.0.0.
 
 
 What's New in astroid 2.6.1?
